# advent

./: .gitignore  Cargo.toml  build.rs
aoc-client/: Cargo.toml
aoc-client/src/: client.rs  lib.rs  solution.rs
parser/src/: direction.rs  lib.rs  map.rs  multi_line_parser.rs  parser.rs
src/: auto_import.rs  main.rs
src/y2023/: d1.rs  d2.rs  d3.rs
src/y2024/: d1.rs  d10.rs  d11.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
