[workspace]
members = ["aoc-client", "parser"]
[package]
name = "advent"
version = "0.1.0"
edition = "2021"
authors = ["Nikos Kostoulas"]

[dependencies]
time = "0.3.30"
aoc-client = { path = "aoc-client" }
regex = "1.11.1"
parser = { path = "parser" }
cached = "0.54.0"

[build-dependencies]
aoc-auto = "0.1.0"

[features]
default = []
test_input = []
